--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Test</title>
     <script>
-      var commercialNode = 'business';
+      var commercialNode = 'politics';
     </script>
     <script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp"></script>
     <script>
