--- a/mobile.html
+++ b/mobile.html
@@ -5,7 +5,7 @@
     <script>
       var commercialNode = 'business';
     </script>
-    <script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="mobile"></script>
+    <script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp_mobile"></script>
     <script>
       var wp_meta_data = {
         contentType: ['BlogStory']
