--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp"></script>
     <script>
       var wp_meta_data = {
-        contentType: ['BlogStory']
+        contentType: ['BlogStory'], page_id: ['thisIsThePageId']
       }
     </script>
   </head>
