--- a/mobile.html
+++ b/mobile.html
@@ -3,7 +3,7 @@
   <head>
     <title></title>
     <script>
-      var commercialNode = 'business';
+      var commercialNode = 'politics';
     </script>
     <script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp_mobile"></script>
     <script>
