changes to keyvalues to allow passing in array of functions as opposed to just a single function. More flexible in terms of adding multiple values to a key.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp"></script>
     <script>
       var wp_meta_data = {
-        contentType: ['BlogStory'], page_id: ['thisIsThePageId'], keywords: ['disaster', 'test', 'page']
+        contentType: ['BlogStory'], page_id: ['thisIsThePageId'], keywords: ['energy', 'disaster', 'test', 'page']
       }
     </script>
   </head>
