--- a/mobile.html
+++ b/mobile.html
@@ -4,8 +4,25 @@
     <title></title>
     <script>
       var commercialNode = 'politics';
+
+      /**
+       * AdOps config
+       */
+      var googletag = googletag || {},
+
+        //store placeAd2 calls if 'real' placeAd2 isn't defined yet
+        placeAd2Queue = [];
+
+      googletag.cmd = googletag.cmd || [];
+
+      //placeholder until placeAd2 is defined
+      function placeAd2(){
+        placeAd2Queue.push(arguments);
+      }
+
     </script>
-    <script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp_mobile"></script>
+    <script src="js/adScript-mobile.js" async></script>
+    <!--script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp_mobile"></script-->
     <script>
       var wp_meta_data = {
         contentType: ['BlogStory']
