--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </script>
 
     <script src="js/ads-sync.js"></script>
-    <script src="js/adScript-wp.js" async></script>
-    <!--script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp"></script-->
+    <!--script src="js/min/wp.js" async></script-->
+    <script src="js/require.js" data-main="js/adScript"></script>
 
     <script>
       var wp_meta_data = {
