--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,7 @@
     </script>
 
     <script src="js/ads-sync.js"></script>
-    <script src="js/adScript-mobile.js" async></script>
+    <script src="js/min/mobile.js" async></script>
 
     <!--script src="js/require.js" data-main="js/adScript" id="adScript" data-adops-site="wp_mobile"></script-->
     <script>
