--- a/slate.html
+++ b/slate.html
@@ -3,7 +3,7 @@
   <head>
     <title>Test</title>
     <script>
-      var commercialNode = 'washingtonpost.com';
+      var commercialNode = 'homepage';
     </script>
 
     <script src="js/ads-sync.js"></script>
@@ -26,23 +26,15 @@
       </script>
     </div>
 
-    <h2>above flex_ss_bb_hp</h2>
+    <h2>above rightflex</h2>
     <p>Lorem ipsum culpa ut non ad cupidatat dolor et enim velit voluptate incididunt est non dolore sit cillum consequat eu et commodo minim nisi incididunt anim nulla exercitation ut et elit eiusmod ut ut ea eiusmod velit dolor do laborum velit esse qui cupidatat esse anim exercitation nostrud sed eu eu occaecat incididunt enim aute nostrud amet proident nisi sint eu elit Ut voluptate ut do in dolore Duis dolor laborum Duis laborum pariatur et laborum ullamco mollit qui et enim esse culpa Ut commodo in non id eu exercitation nulla aute ex amet dolore aute aliqua dolor consequat in dolor aliquip quis nostrud dolor dolore consectetur id ad elit esse ut sint aliqua id aliqua commodo fugiat anim veniam Duis deserunt cupidatat pariatur ad eiusmod Ut dolor anim occaecat culpa laboris labore fugiat do dolore mollit amet id deserunt adipisicing dolor magna ea et in sint fugiat consequat. </p>
 
-    <div id="slug_flex_ss_bb_hp">
+    <div id="slug_rightflex">
       <script>
-        placeAd2(commercialNode, 'flex_ss_bb_hp', false, '');
+        placeAd2(commercialNode, 'rightflex', false, '');
       </script>
     </div>
 
-    <h2>above flex_bb_hp</h2>
-    <p>Lorem ipsum culpa ut non ad cupidatat dolor et enim velit voluptate incididunt est non dolore sit cillum consequat eu et commodo minim nisi incididunt anim nulla exercitation ut et elit eiusmod ut ut ea eiusmod velit dolor do laborum velit esse qui cupidatat esse anim exercitation nostrud sed eu eu occaecat incididunt enim aute nostrud amet proident nisi sint eu elit Ut voluptate ut do in dolore Duis dolor laborum Duis laborum pariatur et laborum ullamco mollit qui et enim esse culpa Ut commodo in non id eu exercitation nulla aute ex amet dolore aute aliqua dolor consequat in dolor aliquip quis nostrud dolor dolore consectetur id ad elit esse ut sint aliqua id aliqua commodo fugiat anim veniam Duis deserunt cupidatat pariatur ad eiusmod Ut dolor anim occaecat culpa laboris labore fugiat do dolore mollit amet id deserunt adipisicing dolor magna ea et in sint fugiat consequat. </p>
-
-    <div id="slug_flex_bb_hp">
-      <script>
-        placeAd2(commercialNode, 'flex_bb_hp', false, '');
-      </script>
-    </div>
 
     <h2>above bb</h2>
     <p>Lorem ipsum quis nisi dolor in reprehenderit ullamco Ut adipisicing amet esse Duis ullamco do est dolor quis deserunt commodo sed aliquip Duis qui amet in sunt quis sed tempor aute non et ad nostrud ullamco non dolor anim nulla dolor ullamco officia adipisicing qui aliquip officia non incididunt elit occaecat ut tempor sunt Ut aliquip et ad in elit commodo veniam ullamco incididunt aliqua officia ut incididunt mollit dolor nisi magna magna ex tempor labore nulla elit laborum dolor labore dolor magna irure sunt officia voluptate et consequat voluptate dolore fugiat Ut deserunt fugiat eu in exercitation consequat eiusmod sunt aute ullamco cillum dolore do Duis mollit consequat magna culpa dolor consectetur in esse dolore proident mollit ullamco.</p>
@@ -84,18 +76,3 @@
 
   </body>
 </html>
-
-
-<!--script>
-  (function(d, w){
-    var s = d.createElement('script');
-    s.src = "http://www.googletagservices.com/tag/js/gpt.js";
-    d.getElementsByTagName('head')[0].appendChild(s);
-
-    w.placeAd2Queue = [];
-    w.placeAd2 = function(){
-      placeAd2Queue.push(arguments);
-    }
-  })(document, window);
-</script-->
-<!--script src="js/generic.js" async defer></script-->
