--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>Test</title>
     <script>
-      var commercialNode = 'washingtonpost.com';
+      var commercialNode = 'politics';
     </script>
 
     <script src="js/ads-sync.js"></script>
     <!--script src="js/min/wp.js" async></script-->
-    <script src="js/require.js" data-main="js/main"></script>
+    <script src="js/lib/require.js" data-main="js/main"></script>
 
     <script>
       var wp_meta_data = {
