--- a/slate.html
+++ b/slate.html
@@ -8,7 +8,7 @@
 
     <script src="js/ads-sync.js"></script>
     <!--script src="js/min/wp.js" async></script-->
-    <script src="js/require.js" data-main="js/main"></script>
+    <script src="js/lib/require.js" data-main="js/main"></script>
 
     <script>
       var wp_meta_data = {
