--- a/slate.html
+++ b/slate.html
@@ -6,9 +6,9 @@
       var commercialNode = 'homepage';
     </script>
 
-    <script src="js/ads-sync.js"></script>
+    <script src="js/ads-sync.js" id="adScript" data-adops-site="slate"></script>
     <!--script src="js/min/wp.js" async></script-->
-    <script src="js/lib/require.js" data-main="js/main"></script>
+    <!--script src="js/lib/require.js" data-main="js/main"></script-->
 
     <script>
       var wp_meta_data = {
