beginning to update scripts to enable us to render ads using data attributes rather than placeAd2

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Test</title>
     <script>
-      var commercialNode = 'washingtonpost.com';
+      var commercialNode = 'politics';
     </script>
 
-    <script src="js/ads-sync.js" id="adScript" data-adops-site="wp"></script>
+    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="wp"></script>
     <!--script src="js/min/wp.js" async></script-->
     <!--script src="js/lib/require.js" data-main="js/main"></script-->
 
