--- a/homepage.html
+++ b/homepage.html
@@ -95,7 +95,7 @@ NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);
 <!--  Combo JS:  -->
 <script type="text/javascript" src="http://js.washingtonpost.com/wpost/js/combo?token=20130314122300&c=true&m=true&context=eidos&r=/conf.js&r=/jquery-1.7.1.js&r=/plugin/plugin.tooltip-1.0.0.js&r=/plugin/plugin.jquery.imageLazyLoader-1.0.0.js&r=/actmgmt/acctmgmt_common.js&r=/plugin/plugin.jquery.cookie-1.0.0.js&r=/plugin/plugin.jquery.tools.overlay.min.js"></script><script type="text/javascript" src="http://www.washingtonpost.com/wp-srv/javascript/piggy-back-on-ads.js"></script>
 
-<script src="js/ads-sync.js"></script>
+<script src="js/scriptloader.js" id="adscriptloader" data-adops-site="wp" async></script>
 <!--script src="js/lib/require.js" data-main="js/main"></script-->
 <!--script src="js/min/wp.js" async></script-->
 
@@ -3113,8 +3113,6 @@ if (!NREUMQ.f) {
 };
 NREUMQ.push(["nrfj", "beacon-3.newrelic.com", "33dbaac1f2", "1451398", "NQQDZEAAXkRXB0wNWQxOL19ADFFbXx5dAGMQCE4aHTJJRHULVgJfBU42VVAxX0VCBVRLQhURFlVQTho=", 0, 244, new Date().getTime(), "", "", "", "", ""]);
 </script>
-
-<script src="js/require.js" data-main="js/main"></script>
 
 
 </body></html>
