--- a/mobile.html
+++ b/mobile.html
@@ -6,10 +6,10 @@
       var commercialNode = 'politics';
     </script>
 
-    <script src="js/ads-sync.js"></script>
+    <script src="js/scriptloader.js"></script>
     <script src="js/lib/require.js" data-main="js/main"></script>
 
-    <!--script src="js/lib/require.js" data-main="js/main" id="adScript" data-adops-site="wp_mobile"></script-->
+    <!--script src="js/lib/require.js" data-main="js/main" id="adscriptloader" data-adops-site="wp_mobile"></script-->
     <script>
       var wp_meta_data = {
         contentType: ['BlogStory']
