--- a/slate.html
+++ b/slate.html
@@ -3,10 +3,11 @@
   <head>
     <title>Test</title>
     <script>
-      var commercialNode = 'homepage';
+      var commercialNode = 'business';
     </script>
 
-    <script src="js/ads-sync.js" id="adScript" data-adops-site="slate"></script>
+    <!--script src="js/lib/jquery.js"></script-->
+    <!--script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate"></script-->
     <!--script src="js/min/wp.js" async></script-->
     <!--script src="js/lib/require.js" data-main="js/main"></script-->
 
@@ -20,59 +21,32 @@
   </head>
   <body>
     <h1>GPT Test page</h1>
-    <div id="slug_leaderboard">
-      <script>
-        placeAd2(commercialNode, 'leaderboard', false, '');
-      </script>
-    </div>
+    <div id="slug_leaderboard" data-ad-type="leaderboard"></div>
 
     <h2>above rightflex</h2>
     <p>Lorem ipsum culpa ut non ad cupidatat dolor et enim velit voluptate incididunt est non dolore sit cillum consequat eu et commodo minim nisi incididunt anim nulla exercitation ut et elit eiusmod ut ut ea eiusmod velit dolor do laborum velit esse qui cupidatat esse anim exercitation nostrud sed eu eu occaecat incididunt enim aute nostrud amet proident nisi sint eu elit Ut voluptate ut do in dolore Duis dolor laborum Duis laborum pariatur et laborum ullamco mollit qui et enim esse culpa Ut commodo in non id eu exercitation nulla aute ex amet dolore aute aliqua dolor consequat in dolor aliquip quis nostrud dolor dolore consectetur id ad elit esse ut sint aliqua id aliqua commodo fugiat anim veniam Duis deserunt cupidatat pariatur ad eiusmod Ut dolor anim occaecat culpa laboris labore fugiat do dolore mollit amet id deserunt adipisicing dolor magna ea et in sint fugiat consequat. </p>
 
-    <div id="slug_rightflex">
-      <script>
-        placeAd2(commercialNode, 'rightflex', false, '');
-      </script>
-    </div>
+    <div id="slug_rightflex" data-ad-type="rightflex"></div>
 
+    <h2>mid article flex units below</h2>
+    <div id="slug_midarticleflex" data-ad-type="midarticleflex"></div>
+    <div id="slug_midarticleflex_2" data-ad-type="midarticleflex|2"></div>
 
-    <h2>above bb</h2>
+    <h2>above bb's</h2>
     <p>Lorem ipsum quis nisi dolor in reprehenderit ullamco Ut adipisicing amet esse Duis ullamco do est dolor quis deserunt commodo sed aliquip Duis qui amet in sunt quis sed tempor aute non et ad nostrud ullamco non dolor anim nulla dolor ullamco officia adipisicing qui aliquip officia non incididunt elit occaecat ut tempor sunt Ut aliquip et ad in elit commodo veniam ullamco incididunt aliqua officia ut incididunt mollit dolor nisi magna magna ex tempor labore nulla elit laborum dolor labore dolor magna irure sunt officia voluptate et consequat voluptate dolore fugiat Ut deserunt fugiat eu in exercitation consequat eiusmod sunt aute ullamco cillum dolore do Duis mollit consequat magna culpa dolor consectetur in esse dolore proident mollit ullamco.</p>
 
-    <div id="slug_bigbox">
-      <script>
-        placeAd2(commercialNode, 'bigbox', false, '');
-      </script>
-    </div>
-    <div id="slug_bigbox_3">
-      <script>
-        placeAd2(commercialNode, 'bigbox|3', false, '');
-      </script>
-    </div>
-    <div id="slug_bigbox_4">
-      <script>
-        placeAd2(commercialNode, 'bigbox|4', false, '');
-      </script>
-    </div>
-    <div id="slug_bigbox_5">
-      <script>
-        placeAd2(commercialNode, 'bigbox|5', false, '');
-      </script>
-    </div>
-    <div id="slug_bigbox_6">
-      <script>
-        placeAd2(commercialNode, 'bigbox|6', false, '');
-      </script>
-    </div>
+    <div id="slug_bigbox" data-ad-type="bigbox"></div>
+    <div id="slug_bigbox_3" data-ad-type="bigbox|3"></div>
+    <div id="slug_bigbox_4" data-ad-type="bigbox|4"></div>
+    <div id="slug_bigbox_5" data-ad-type="bigbox|5"></div>
+    <div id="slug_bigbox_6" data-ad-type="bigbox|6"></div>
 
     <h2>above bb2</h2>
     <p>Lorem ipsum velit ad quis do aliqua irure Excepteur culpa eu sed labore in nostrud est nulla in elit enim ex anim ex pariatur in laboris reprehenderit dolore esse culpa in quis sint officia ad aliqua occaecat Excepteur dolore aute pariatur sunt dolor fugiat pariatur dolor sed pariatur ad commodo cupidatat eu ut deserunt consectetur proident in ut adipisicing laborum consequat Excepteur ullamco elit consequat do consequat pariatur veniam in incididunt minim deserunt Duis velit dolor est velit deserunt sunt in aliqua elit voluptate consectetur id amet eiusmod exercitation mollit esse in in cillum Ut aliquip enim sed aute sint sit proident veniam magna in sint ut sunt voluptate proident consequat aliqua amet irure magna do Duis cupidatat esse adipisicing id elit in quis dolor esse mollit veniam fugiat adipisicing in enim pariatur cupidatat magna irure dolor reprehenderit. </p>
 
-    <div id="slug_bigbox_2">
-      <script>
-        placeAd2(commercialNode, 'bigbox|2', false, '');
-      </script>
-    </div>
+    <div id="slug_bigbox_2" data-ad-type="bigbox|2"></div>
+
+    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate" async></script>
 
   </body>
 </html>
