--- a/slate_homepage.html
+++ b/slate_homepage.html
@@ -84,7 +84,7 @@ var slate_public_url = "http://www.slate.com/";
     <!--script src="http://js.washingtonpost.com/wp-srv/ad/generic_ad.js"></script>
     <script src="http://js.washingtonpost.com/wp-srv/ad/slate.js"></script-->
 
-    <script src="js/ads-sync.js" id="adScript" data-adops-site="slate"></script>
+    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate"></script>
 
 
     <!-- Facebook OG -->
