--- a/slate_article.html
+++ b/slate_article.html
@@ -1012,7 +1012,7 @@ function listenNow(title) {
     <!--div id="slug_agoogleaday" style="display:none;">
         <script type="text/javascript">placeAd2(commercialNode,"agoogleaday",false,"");</script>
     </div-->
-    <div id="slug_agoogleaday" data-ad-type="agoogleady"></div>
+    <div id="slug_agoogleaday" data-ad-type="agoogleaday"></div>
 <!--AGOOGLEADAY AD END-->
 
 
@@ -2218,7 +2218,7 @@ function listenNow(title) {
 	<!--div id="slug_336x60|2" style="display:none;">
 		<script type="text/javascript">placeAd2(commercialNode,'336x60|2',false,"");</script>
 	</div-->
-    <div id="slug_336x60_2" data-ad-type="3336x60|2"></div>
+    <div id="slug_336x60_2" data-ad-type="336x60|2"></div>
 	<!-- 336x60|2 AD END-->
 
 </div>
