overrides consolidatd into Ad.js. GPT included locally and consolidated into minified site script. Other changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       var commercialNode = 'politics';
     </script>
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="wp"></script>
+    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="wp"></script>
     <!--script src="js/min/wp.js" async></script-->
     <!--script src="js/lib/require.js" data-main="js/main"></script-->
 
