--- a/mobile.html
+++ b/mobile.html
@@ -9,7 +9,7 @@
     <script src="js/scriptloader.js"></script>
     <script src="js/lib/require.js" data-main="js/main"></script>
 
-    <!--script src="js/lib/require.js" data-main="js/main" id="adscriptloader" data-adops-site="wp_mobile"></script-->
+    <!--script src="js/lib/require.js" data-main="js/main" id="adscriptloader" data-ad-site="wp_mobile"></script-->
     <script>
       var wp_meta_data = {
         contentType: ['BlogStory']
