--- a/slate.html
+++ b/slate.html
@@ -46,7 +46,7 @@
 
     <div id="slug_bigbox_2" data-ad-type="bigbox|2"></div>
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate" async></script>
+    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate" async></script>
 
   </body>
 </html>
