--- a/slate_article.html
+++ b/slate_article.html
@@ -79,8 +79,8 @@ var slate_public_url = "http://www.slate.com/";
     <!-- Ad Ops -->
     <script>commercialNode = "news/explainer";</script>
 
-    <!--script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate"></script-->
-
+    <!--script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate"></script-->
+a
 
     <!-- Facebook OG -->
     <meta property="og:title" content="Why Is the Age of Adulthood 18 and Not 21?" />
@@ -2648,7 +2648,7 @@ SG_Debug && SG_Debug.pagedebug && window.console && console.log && console.log('
 </script>
 
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate"></script>
+    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate"></script>
 
 
 <!--
