--- a/slate_front.html
+++ b/slate_front.html
@@ -3050,7 +3050,7 @@ SG_Debug && SG_Debug.pagedebug && window.console && console.log && console.log('
 SG_Debug && SG_Debug.pagedebug && window.console && console.log && console.log('[' + (new Date()-SG_Debug.initialTime)/1000 + ']' + ' Bottom of footer-scripts-hook.jsp');
 </script>
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate"></script>
+    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate"></script>
 
 
 
