--- a/slate_homepage.html
+++ b/slate_homepage.html
@@ -84,7 +84,7 @@ var slate_public_url = "http://www.slate.com/";
     <!--script src="http://js.washingtonpost.com/wp-srv/ad/generic_ad.js"></script>
     <script src="http://js.washingtonpost.com/wp-srv/ad/slate.js"></script-->
 
-    <!--script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate"></script-->
+    <!--script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate"></script-->
 
 
     <!-- Facebook OG -->
@@ -12026,7 +12026,7 @@ SG_Debug && SG_Debug.pagedebug && window.console && console.log && console.log('
 SG_Debug && SG_Debug.pagedebug && window.console && console.log && console.log('[' + (new Date()-SG_Debug.initialTime)/1000 + ']' + ' Bottom of footer-scripts-hook.jsp');
 </script>
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-adops-site="slate"></script>
+    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate"></script>
 
 
 
