--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
       var wp_meta_data = {
-        contentType: ['CompoundStory'],
+        contentType: ['BlogStory'],
         page_id: ['thisIsThePageId'],
         keywords: ['energy', 'disaster', 'test', 'page']
       };
