--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
       var commercialNode = 'politics';
     </script>
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="wp"></script>
-    <!--script src="js/min/wp.js" async></script-->
-    <!--script src="js/lib/require.js" data-main="js/main"></script-->
+    <script src="js/min/loader.min.js" data-ad-site="wp"></script>
 
     <script>
       var wp_meta_data = {
