--- a/mobile.html
+++ b/mobile.html
@@ -18,7 +18,7 @@
 
     <div id="slug_t" data-ad-type="t"></div>
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="wp_mobile" async></script>
+    <script src="js/loader.js" id="adscriptloader" data-ad-site="wp_mobile" async></script>
 
   </body>
 </html>
