--- a/slate_article.html
+++ b/slate_article.html
@@ -79,7 +79,7 @@ var slate_public_url = "http://www.slate.com/";
     <!-- Ad Ops -->
     <script>commercialNode = "news/explainer";</script>
 
-    <!--script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate"></script-->
+    <!--script src="js/loader.js" id="adscriptloader" data-ad-site="slate"></script-->
 a
 
     <!-- Facebook OG -->
@@ -2335,7 +2335,7 @@ SG_Debug && SG_Debug.pagedebug && window.console && console.log && console.log('
     <script>DD_belatedPNG.fix('img, .png_bg'); // Fix any <img> or .png_bg bg-images. Also, please read goo.gl/mZiyb </script>
   <![endif]-->
 
-    <script src="js/scriptloader.js" id="adscriptloader" data-ad-site="slate"></script>
+    <script src="js/loader.js" id="adscriptloader" data-ad-site="slate"></script>
 
 
 
