--- a/slate.html
+++ b/slate.html
@@ -10,7 +10,7 @@
     <!--script src="js/loader.js" id="adscriptloader" data-adops-site="slate"></script-->
     <!--script src="js/min/wp.js" async></script-->
     <!--script src="js/lib/require.js" data-main="js/main"></script-->
-    <script type="text/javascript" src="http://js.washingtonpost.com/wpost/js/combo/?token=201210102320000&amp;c=true&amp;m=true&amp;context=eidos&amp;r=/jquery-1.7.1.js"></script>
+    <!--script type="text/javascript" src="http://js.washingtonpost.com/wpost/js/combo/?token=201210102320000&amp;c=true&amp;m=true&amp;context=eidos&amp;r=/jquery-1.7.1.js"></script-->
     <script>
       var wp_meta_data = {
         //contentType: ['BlogStory'],
