--- a/slate.html
+++ b/slate.html
@@ -3,7 +3,7 @@
   <head>
     <title>Test</title>
     <script>
-      var commercialNode = 'news';
+      var commercialNode = 'homepage';
     </script>
 
     <!--script src="js/lib/jquery.js"></script-->
