mobile updates and other small tweaks

--- a/mobile.html
+++ b/mobile.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <title></title>
+    <title>Mobile test page</title>
     <script>
-      var commercialNode = 'politics';
+      var commercialNode = 'business';
     </script>
-
-    <!--script src="js/lib/require.js" data-main="js/main" id="adscriptloader" data-ad-site="wp_mobile"></script-->
-    <script>
-      var wp_meta_data = {
-        contentType: ['BlogStory']
-      }
-    </script>
-
   </head>
   <body>
 
     <div id="slug_t" data-ad-type="t"></div>
-
-    <script src="js/loader.js" id="adscriptloader" data-ad-site="wp_mobile" async></script>
+    <script src="js/min/loader.min.js" data-ad-site="wp_mobile"></script>
+    <!--script src="http://js.washingtonpost.com/wp-srv/ad/loaders/latest/js/min/loader.min.js" data-ad-site="wp_mobile"></script-->
 
   </body>
 </html>
