extended jquery check to make sure that it is at least 1.7.2. namespaced jquery to wpAd.$ using noConflict() when needed. This is useful on theroot.com where jquery is v1.2.4. Modified jquery ui to pass in wpAd.$ instead of jquery.

--- a/slate.html
+++ b/slate.html
@@ -6,6 +6,7 @@
       var commercialNode = 'homepage';
     </script>
 
+    <!--script src="http://js.washingtonpost.com/wpost/js/combo/?token=201210102320000&c=true&m=true&context=eidos&r=/jquery-1.7.1.js"></script-->
     <!--script src="js/lib/jquery.js"></script-->
     <!--script src="js/loader.js" id="adscriptloader" data-adops-site="slate"></script-->
     <!--script src="js/min/wp.js" async></script-->
