--- a/theroot.html
+++ b/theroot.html
@@ -5,6 +5,8 @@
     <script>
       var commercialNode = 'homepage';
     </script>
+
+    <script src="http://www.theroot.com/misc/jquery.js?U"></script>
     <script src="js/min/loader.min.js" data-ad-site="theroot"></script>
   </head>
   <body>
