device detection module added. Resposive functionality added. persistent_bb opened on slate

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       var commercialNode = 'politics';
     </script>
 
-    <script src="js/min/loader.min.js" data-ad-site="wp"></script>
+    <script src="js/min/loader.min.js" data-ad-site="wp" data-ad-page-type="responsive"></script>
 
     <script>
       var wp_meta_data = {
@@ -15,9 +15,17 @@
         keywords: ['energy', 'disaster', 'test', 'page']
       };
     </script>
+
   </head>
   <body>
     <h1>GPT Test page</h1>
+
+    <div id="slug_t">
+      <script>
+        placeAd2(commercialNode, 't', false, '');
+      </script>
+    </div>
+
     <div id="slug_tiffany_tile_2">
       <script>
         placeAd2(commercialNode, 'tiffany_tile|2', false, '');
