--- a/slate.html
+++ b/slate.html
@@ -3,7 +3,7 @@
   <head>
     <title>Test</title>
     <script>
-      var commercialNode = 'homepage';
+      var commercialNode = 'news';
     </script>
 
     <script src="http://js.washingtonpost.com/wpost/js/combo/?token=201210102320000&c=true&m=true&context=eidos&r=/jquery-1.7.1.js"></script>
