--- a/slate_homepage.html
+++ b/slate_homepage.html
@@ -1474,16 +1474,12 @@ By Paul Lukas<br>
 
 
                                    <!--468x60 AD BEGIN-->
-									<!--li class="sl-toc-art-item-ad" id="slug_468x60" style="display:none;">
-										<div>
+									<li class="sl-toc-art-item-ad" id="slug_468x60" style="display:none;">
 										  <script type="text/javascript">
 											placeAd2(commercialNode,"468x60",false,"");
 										  </script>
-										</div>
-									</li-->
+									</li>
 									<!--468x60 AD END-->
-                                    <li class="sl-toc-art-item-ad" id="slug_468x60" data-at-type="468x60"></li>
-
 
 
                      <li data-vr-contentbox class="sl-toc-art-item  sl-toc-art-item-alt ">
