wp keyvalues added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         contentType: ['BlogStory'],
         page_id: ['thisIsThePageId'],
         keywords: ['energy', 'disaster', 'test', 'page']
+        //author: ['some DUDE']
       };
     </script>
 
