a couple of util functions added and implemented. keyvalue cleanup and tweaks

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="eng">
   <head>
     <title>Test</title>
+
     <script>
-      var commercialNode = 'politics';
+      var commercialNode = 'washingtonpost.com';
     </script>
 
     <script src="js/min/loader.min.js" data-ad-site="wp" data-ad-page-type="responsive"></script>
 
     <script>
       var wp_meta_data = {
-        contentType: ['BlogStory'],
+        //contentType: ['BlogStory'],
+        contentType: ['CompoundStory'],
         page_id: ['thisIsThePageId'],
-        keywords: ['energy', 'disaster', 'test', 'page']
-        //author: ['some DUDE']
+        keywords: ['energy', 'disaster', 'test', 'page'],
+        author: ['test author']
       };
     </script>
 
