added some basic unit tests

--- a/test/tests.html
+++ b/test/tests.html
@@ -8,10 +8,9 @@
     <script>
       var commercialNode = 'news';
       var wp_meta_data = {
-        author: ['test author'],
-        page_id: ['123456789'],
-        contentType: ['blog']
-      }
+        page_id: ['thisIsThePageId'],
+        keywords: ['energy', 'disaster', 'test', 'page']
+      };
     </script>
 
   </head>
@@ -25,7 +24,7 @@
 
     <script src="../bower_components/jquery/jquery.js"></script>
 
-    <script src="../js/min/loader.min.js" data-ad-site="slate"></script>
+    <script src="../js/min/loader.min.js" data-ad-site="slate" async></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
     <script src="slate_tests.js"></script>
