mobile viewport declaration

--- a/mobile.html
+++ b/mobile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
+    <meta name="viewport" content="width=device-width">
     <title>Mobile test page</title>
     <script>
       var commercialNode = 'business';
