updates for mobile

--- a/test/slate_tests.html
+++ b/test/slate_tests.html
@@ -20,11 +20,11 @@
     <div id="qunit-fixture"></div>
 
     <div id="slug_leaderboard" data-ad-type="leaderboard"></div>
-    <div id="slug_rightflex" data-ad-type="rightflex"></div>
+    <div id="slug_rightflex"></div>
 
     <script src="../bower_components/jquery/jquery.js"></script>
 
-    <script src="../js/min/loader.min.js" data-ad-site="slate" async></script>
+    <script src="../js/min/loader.min.js" data-ad-site="slate"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
     <script src="slate_tests.js"></script>
