throwing the MHP ad call in the floatAd div

--- a/mobile_homepage.html
+++ b/mobile_homepage.html
@@ -75,8 +75,9 @@ var _sf_startpt=(new Date()).getTime();//chartbeat
 </script>
 </head>
 <body>
-<!--div id="floatAd"></div-->
-<div id="slug_t" data-ad-type="t" class="ad-fixed-bottom"></div>
+<div id="floatAd">
+  <div id="slug_t" data-ad-type="t" class="ad-fixed-bottom"></div>
+</div>
 <div class="page page-section-front section-homepage" data-last-published="20130905213112" data-adkey="mob.wp.homepage/front" data-timestamp="20130905213243">
 <header data-role="header" class="dropdown-group">
 <dl class="horiz-menu">
